# sysml

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  deny.toml
ci/: nomograph-mr-diff.gitlab-ci.yml  nomograph-sysml.gitlab-ci.yml
crates/nomograph-core/: Cargo.toml
crates/nomograph-core/src/: lib.rs  traits.rs
crates/sysml-cli/: Cargo.toml
crates/sysml-cli/src/: main.rs  mcp.rs
crates/sysml-core/: Cargo.toml
crates/sysml-core/src/: badge.rs  core_error.rs  core_traits.rs  core_types.rs  diff.rs  element.rs  graph.rs  lib.rs  metamodel.rs  parser.rs  plan.rs  relationship.rs  render.rs  resolve.rs  scaffold.rs  vector.rs  vocabulary.rs  walker.rs
tests/fixtures/apollo-11/: Apollo11Model.sysml  LICENSE.md
tests/fixtures/apollo-11/Analysis/: AnalysisPackage.sysml
tests/fixtures/apollo-11/CoSMA/: CoSMAQuantitiesAndUnitsPackage.sysml
tests/fixtures/apollo-11/Execution/: Apollo11MissionExecutionPackage.sysml
tests/fixtures/apollo-11/Purpose/: MissionPackage.sysml
tests/fixtures/apollo-11/Technical/: TechnicalComponentsPackage.sysml
tests/fixtures/eve/: README.md
tests/fixtures/eve/DomainModel/: AnalysisProblemSpace.sysml  BusinessCaseOpsCon.sysml  Concerns.sysml  Domain.sysml  MiningCorporationRequirementsDecl.sysml  MiningCorporationRequirementsDef.sysml  MiningFrigate.sysml  MiningFrigateRequirements.sysml  MiningFrigateRequirementsDef.sysml  MiningFrigateVerificationCases.sysml  cause-effect.sysml
tests/fixtures/eve/LogicalArchitecture/: ActionsHull.sysml  COTS.sysml  MiningFrigate.sysml  UseCasesHull.sysml  rollupAnalysis.sysml  standardPortsAndInterfaces.sysml
tests/fixtures/eve/UseCases/: OperationalUseCaseActions.sysml  UseCasesFrigate.sysml
