[workspace]
resolver = "2"
members = [
    "crates/sysml-core",
    "crates/sysml-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://gitlab.com/nomograph/sysml"
authors = ["Andrew Dunn <andunn@gitlab.com>"]
homepage = "https://gitlab.com/nomograph/sysml"
keywords = ["sysml", "systems-engineering", "knowledge-graph", "mbse", "tree-sitter"]
categories = ["command-line-utilities", "parser-implementations"]

[workspace.dependencies]
tree-sitter = "0.24"
tree-sitter-sysml = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
handlebars = "6"
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
fastembed = { version = "5.12", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
hnsw_rs = "0.3"
sysml-core = { path = "crates/sysml-core", version = "0.1.0", package = "nomograph-sysml-core" }
