[package]
name = "nomograph-sysml"
description = "CLI-native knowledge graph toolkit for SysML v2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
readme = "../../README.md"

[[bin]]
name = "sysml"
path = "src/main.rs"

[features]
default = []
mcp = ["dep:rmcp", "dep:schemars", "dep:tokio", "dep:serde"]
vectors = ["sysml-core/vector"]

[dependencies]
sysml-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
