[package]
name = "sysml-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
vector = ["dep:fastembed", "dep:hnsw_rs"]

[dependencies]
nomograph-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-sysml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
handlebars = { workspace = true }
fastembed = { workspace = true, optional = true }
hnsw_rs = { workspace = true, optional = true }
