[package]
name = "nomograph-sysml-core"
description = "SysML v2 knowledge graph library -- parser, graph builder, queries, and rendering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true

[features]
default = []
vector = ["dep:fastembed", "dep:hnsw_rs"]

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-sysml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
handlebars = { workspace = true }
fastembed = { workspace = true, optional = true }
hnsw_rs = { workspace = true, optional = true }
